manifest/objects/AcctGrpConParse_Exception__c.object
<CustomObject>
    <fields>
        <fullName>AGCPI__c</fullName>
        <description>Parent to this exception</description>
        <label>AcctGrpConParsing Item</label>
        <referenceTo>AcctGrpConParsing_Item__c</referenceTo>
        <relationshipLabel>AcctGrpConParse Exceptions</relationshipLabel>
        <relationshipName>AcctGrpConParse_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>What is the category of this exception (e.g. INFO, FORMAT ERROR, CONTENT ERROR, REQUIRED)</description>
        <label>Exception Type</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Desc__c</fullName>
        <description>Everything about the exception.</description>
        <label>Full Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <description>Which object was affected.</description>
        <label>SObject</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Desc__c</fullName>
        <description>Abbreviated string hinting at the cause.</description>
        <label>Short Description</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AcctGrpConParse Exception</label>
    <nameField>
        <displayFormat>AGCPE-{00000000}</displayFormat>
        <label>AcctGrpConParse Exception</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AcctGrpConParse Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>